[package]
name = "grpc-server"
version = "0.1.0"
authors = ["Vu Viet Tai<vuviettai@gmail.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1.6.0"
prost = { version = "0.12" }
prost-types = { version = "0.12", default-features = false }
tokio = { version = "^1.37", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.3"


[build-dependencies]
prost-build = { version = "0.12.4" }
tonic-build = { version = "0.11.0" }

